add more fields, validation, and style

--- a/views/dataDisplay.pug
+++ b/views/dataDisplay.pug
@@ -16,5 +16,31 @@ block content
   p
     h3 Gender:
     |  #{entries[3]}
+  p
+    h3 Longitude Major Ticks:
+    |  #{entries[4]}
+  p
+    h3 Longitude Minor Ticks:
+    |  #{entries[5]}
+  p
+    h3 Number Of Nodes:
+    |  #{entries[6]}
+
+  p
+    h3 Clip Latitude At:
+    |  #{entries[7]}
+
+
+  p
+    h3 Latitude Tick Interval:
+    |  #{entries[8]}
+  p
+    h3 Mapscale:
+    |  1/
+    |  #{entries[9]}
+  p
+    h3 Height:
+    |  #{entries[10]}
+    |  cm
 
   a(href='/form') Type in new entry
