--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,23 @@ doctype html
 html
   head
     title= title
+    script(src="https://code.getmdl.io/1.3.0/material.min.js")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="https://code.getmdl.io/1.3.0/material.lime-orange.min.css")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
   body
-    block content
+    div(class="mdl-layout mdl-js-layout mdl-layout--fixed-header")
+      header(class="mdl-layout__header")
+        div(class="mdl-layout__header-row")
+          span(class="mdl-layout-title") Scalebar Reciever
+
+          div(class="mdl-layout-spacer")
+          nav(class="mdl-navigation mdl-layout--large-screen-only")
+            a(class="mdl-navigation__link" href="") Link
+      div(class="mdl-layout__drawer")
+        span(class="mdl-layout-title") Scalebar Reciever
+        nav(class="mdl-navigation")
+         a(class="mdl-navigation__link" href="") Link
+      main(class="mdl-layout__content")
+        div(class="page-content")
+          block content
