--- a/views/form.pug
+++ b/views/form.pug
@@ -2,8 +2,7 @@ extends layout
 
 block content
   span(class='centeringTitle')
-    h1= title
-    p Welcome to #{title}
+    h1 Order Form 
   form(action='/form', method='POST', class='centeringForm')
     p
       p First Name: 
