--- a/views/index.pug
+++ b/views/index.pug
@@ -2,10 +2,9 @@ extends layout
 
 block content
   span(class="centeringForm")
-    h1= title
-    p Welcome to #{title}
-    p Check out the hotel entry: 
+    h1 Welcome to the Scalebar Reciever
+    p Start the process of recieving a custom vector map here: 
       br
       br
       br
-      a(class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect", href='/form') Form
+      a(class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect", href='/form') Request Map
