add frontend input saving and font-size field

--- a/views/dataDisplay.pug
+++ b/views/dataDisplay.pug
@@ -11,23 +11,24 @@ block content
         p #{entries[1]}
       h5 Age:
         p #{entries[2]}
-      h5 Gender:
-        p #{entries[3]}
       h5 Longitude Major Ticks:
-        p [ #{entries[4]} ]
+        p [ #{entries[3]} ]
       h5 Longitude Minor Ticks:
-        p [ #{entries[5]} ]
+        p [ #{entries[4]} ]
       h5 Number Of Nodes:
-        p #{entries[6]}
+        p #{entries[5]}
       h5 Clip Latitude At:
-        p #{entries[7]}
+        p #{entries[6]}
       h5 Latitude Tick Interval:
-        p #{entries[8]}
+        p #{entries[7]}
       h5 Mapscale:
-        p  1/#{entries[9]}
+        p  1/#{entries[8]}
       h5 Height:
-        p #{entries[10]} cm
+        p #{entries[9]} cm
+      h5 Font size:
+        p #{entries[10]}
 
+      br
       p
         a(href='/form') 
           button(class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect", type='submit', title='Submit your requests')
