--- a/views/dataDisplay.pug
+++ b/views/dataDisplay.pug
@@ -5,29 +5,34 @@ block content
     p
       h1 Entered
     p
-      h5 First Name:
-        p #{entries[0]}
-      h5 Last Name:
+      h5 Projection String:
+        p " #{entries[0]} "
+      h5 Minimum Latitude:
         p #{entries[1]}
-      h5 Age:
+      h5 Minimum Latitude:
         p #{entries[2]}
+      h5 Maximum Latitude:
+        p #{entries[3]}
+      h5 Maximum Longitude:
+        p #{entries[4]}
       h5 Longitude Major Ticks:
-        p [ #{entries[3]} ]
+        p [ #{entries[5]}]
       h5 Longitude Minor Ticks:
-        p [ #{entries[4]} ]
-      h5 Number Of Nodes:
-        p #{entries[5]}
-      h5 Clip Latitude At:
-        p #{entries[6]}
-      h5 Latitude Tick Interval:
+        p [ #{entries[6]}]
+      h5 Smoothness:
         p #{entries[7]}
+      h5 Clip Latitude At:
+        p #{entries[8]}
+      h5 Latitude Tick Interval:
+        p #{entries[9]}
       h5 Mapscale:
-        p  1/#{entries[8]}
+        p  1/#{entries[10]}
       h5 Height:
-        p #{entries[9]} cm
+        p #{entries[11]} cm
       h5 Font size:
-        p #{entries[10]}
-
+        p #{entries[12]}
+      h5 Padding:
+        p #{entries[13]}
       br
       p
         a(href='/form') 
