--- a/views/form.pug
+++ b/views/form.pug
@@ -5,57 +5,70 @@ block content
     h1 Order Form 
   form(action='/form', method='POST', class='centeringForm')
     p
-      p First Name: 
-        input(type='text', name='first_name', value=specificInputs[0])
-        span(class ="errors")   #{specificErrors[0]}
+      p
+        label(for="proj_stringContainer" style="vertical-align: middle;") Projection String: " 
+        textarea(id="proj_stringContainer" type='text', name='proj_string', title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.') #{specificInputs[0]}
+        span  "
+        span(class="errors")   #{specificErrors[0]}
 
-      p Last Name: 
-        input(type='text', name='last_name', value=specificInputs[1])
+      p Latitude Minimum: 
+        input(type='number', step="1", name='minLat', value=specificInputs[1], title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.')
         span(class ="errors")   #{specificErrors[1]}
 
-      p Age: 
-        input(type='number', name='age', min='0', value=specificInputs[2] )
+
+      p Longitude Minimum: 
+        input(type='number', step="1", name='minLon',  value=specificInputs[2], title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.')
         span(class ="errors")   #{specificErrors[2]}
 
-      p Projection String Input (optional): [ 
-        input(type='text', name='extent', title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.')
-        span  ]
 
-      p Longitude Major Ticks: [ 
-        input(type='text', name='lon_major_ticks', value=specificInputs[3], title='Distance(s) at which major ticks are to be drawn and labeled.')
-        span  ]
+      p Latitude Maximum: 
+        input(type='number', step="1", name='maxLat',  value=specificInputs[3], title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.')
         span(class ="errors")   #{specificErrors[3]}
 
-      p Longitude Minor Ticks: [ 
-        input(type='text', name='lon_minor_ticks', value=specificInputs[4], title='Distance(s) at which minor ticks are to be drawn, but not labeled.')
-        span  ]
+
+      p Longitude Maximum: 
+        input(type='number', step="1", name='maxLon',  value=specificInputs[4], title='If providing a projection string, an extent in the form (minlat, minlon, maxlat, maxlon) is also required.')
         span(class ="errors")   #{specificErrors[4]}
 
-      p Number Of Nodes: 
-        input(type='number', name='nnodes', value=specificInputs[5], min='1', title='Number of nodes at which to draw verticals.  More nodes results in smoother plots.')
+      p Longitude Major Ticks: [ 
+        input(type='text', name='lon_major_ticks', value=specificInputs[5], title='Distance(s) at which major ticks are to be drawn and labeled.')
+        span  ] km 
         span(class ="errors")   #{specificErrors[5]}
 
-      p Clip Latitude At: 
-        input(type='number', name='cliplat', value=specificInputs[6], step='0.1', min='-90', max='90', title='Latitude at which to clip the plot, e.g. 0.0 to generate a scale bar for the northern hemisphere.  Set to -90.0 for south polar stereographic.')
+      p Longitude Minor Ticks: [ 
+        input(type='text', name='lon_minor_ticks', value=specificInputs[6], title='Distance(s) at which minor ticks are to be drawn, but not labeled.')
+        span  ] km 
         span(class ="errors")   #{specificErrors[6]}
 
-      p Latitude Tick Interval: 
-        input(type='number', name='lat_tick_interval', value=specificInputs[7], min='1', max='90', title='Interval at which latitudinal lines are drawn, e.g. every 5 degrees.')
+      p Smoothness: 
+        input(type='number', name='nnodes', value=specificInputs[7], min='1', step='1', title='Number of nodes at which to draw verticals.  More nodes results in smoother plots.')
         span(class ="errors")   #{specificErrors[7]}
 
-      p Mapscale: 1/( 
-        input(type='number', name='mapscale', value=specificInputs[8], min='1', title='Map scale in fractional form, e.g. 1/1000000')
-        span  )
+      p Clip Latitude At: 
+        input(type='number', name='cliplat', value=specificInputs[8], step='0.001', min='-90', max='90', title='Latitude at which to clip the plot, e.g. 0.0 to generate a scale bar for the northern hemisphere.  Set to -90.0 for south polar stereographic.')
         span(class ="errors")   #{specificErrors[8]}
 
-      p Height: 
-        input(type='number', name='height', value=specificInputs[9], min='1', title='Scalebar height in cm.')
-        span  cm
+      p Latitude Tick Interval: 
+        input(type='number', name='lat_tick_interval', value=specificInputs[9], min='1', step="1" max='90', title='Interval at which latitudinal lines are drawn, e.g. every 5 degrees.')
         span(class ="errors")   #{specificErrors[9]}
 
-      p Font size: 
-        input(type='number', name='fontsize', value=specificInputs[10], min='1', title='Font size.')
+      p Mapscale: 1/( 
+        input(type='number', name='mapscale', value=specificInputs[10], min='1', title='Map scale in fractional form, e.g. 1/1000000')
+        span  )
         span(class ="errors")   #{specificErrors[10]}
+
+      p Height: 
+        input(type='number', name='height', value=specificInputs[11], min='1', title='Scalebar height in cm.')
+        span  cm
+        span(class ="errors")   #{specificErrors[11]}
+
+      p Font size: 
+        input(type='number', name='fontsize', value=specificInputs[12], min='1', title='Font size.')
+        span(class ="errors")   #{specificErrors[12]}
+
+      p Padding: 
+        input(type='number', name='padding', value=specificInputs[13], min='1', step='1', title='Padding of SVG map.')
+        span(class ="errors")   #{specificErrors[13]}
 
       br
 
