--- a/views/dataDisplay.pug
+++ b/views/dataDisplay.pug
@@ -31,7 +31,7 @@ block content
         p #{entries[11]} cm
       h5 Font size:
         p #{entries[12]}
-      h5 Padding:
+      h5 Padding Size:
         p #{entries[13]}
       br
       p
